# academic-risk-predictor-backend

./: .dockerignore  .gitignore  README.md  REFACTORIZACION_COMPLETADA.md  alembic.ini  docker-compose.yml  dockerfile  env.example  main.py  pyproject.toml  requirements.txt
.github/workflows/: azure-deploy.yml  cd.yml  ci.yml
.kiro/steering/: api-restful-practices.md  documentation.md  gitflow.md  product.md  structure.md  tdd.md  tech.md
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_user_status.py  0003_add_programs_and_student_profiles.py  0004_add_university_and_multi_university_support.py  0005_add_campus_hierarchy.py
app/: __init__.py  main.py
app/core/: config.py  security.py
app/domain/: enums.py  exceptions.py
app/infrastructure/: database.py
app/schemas/: __init__.py  student.py
app/services/: ml_service.py
backup/: README.md  README_ORIGINAL.md  generar_datos_entrenamiento.py
datasets/: dataset_estudiantes_decimal.csv
docs/: database.md  users-api.md
infra/: README.md  deploy.sh  main.bicep
scripts/: seed_admin.py
tests/: conftest.py  test_users.py  test_users_properties.py
tests/integration/: conftest.py  test_audit_log_repository.py  test_auth_endpoints.py  test_campus_endpoints.py  test_consent_repository.py  test_course_repository.py  test_migration_0004.py  test_migration_0005.py  test_protected_endpoints.py  test_role_protection.py  test_user_repository.py
tests/property/: test_access_control_properties.py  test_audit_atomicity.py  test_audit_grade_write_property.py  test_audit_immutability.py  (+31 more)
(+103 files in other folders)
